# bettermoments

./: .gitignore  .readthedocs.yaml  .travis.yml  README.md  bettermoments.py  pyproject.toml  setup.py  tests.py
bettermoments/: __init__.py  collapse_cube.py  collapse_cube_old.py  io.py  mcmc_sampling.py  methods.py  methods_old.py  profiles.py  quadratic.py
bettermoments/tests/: tests.py
docs/: BACKGROUND.md  FAQ.md  conf.py  index.rst  requirements.txt
docs/_static/notebooks/: DetermineOptimalResolution.ipynb  moment-comparison.ipynb  simulated-spectrum.ipynb
docs/_static/paper/: bettermoments.tex  bibliography.bib
docs/paper/: .gitignore
docs/tutorials/: Cookbook_1.ipynb
docs/tutorials/.ipynb_checkpoints/: Cookbook_1-checkpoint.ipynb  Cookbook_2-checkpoint.ipynb
docs/user/: citations.rst  collapse_cube.rst  command_line.rst  faq.rst  methods.rst
notebooks/: analytical-model.ipynb  diskmodel.py  math.ipynb  moment-comparison.ipynb  simulated-spectrum.ipynb  test.ipynb
paper/: .gitignore  Makefile  bettermoments.bib  bettermoments.tex  figure.tex
